--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #Custom
 
 data/
+0X_01_LLM_RAG_SOLUTION.ipynb
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,jupyternotebooks
