--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 0X_01_LLM_RAG_SOLUTION.ipynb
 
+data/vectorstores
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,jupyternotebooks
 
